--- a/styles.css
+++ b/styles.css
@@ -479,6 +479,15 @@ footer a:hover {
     font-weight: 700;
 }
 
+.closing {
+    text-align: center;
+    margin-top: 7rem;
+}
+
+.closing a {
+    font-weight: 700;
+}
+
 
 /** MEDIA QUERIES **/
 
@@ -570,6 +579,9 @@ footer a:hover {
         grid-template-rows: repeat(3, 1fr);
         grid-gap: 2rem;
     }
+    .testimonials-col {
+        padding: 1rem;
+    }
     .quote {
         inset: 3% 0 0 0;
     }
@@ -613,7 +625,7 @@ footer a:hover {
         grid-gap: 1rem;
     }
     .footer-bg {
-        height: 125%;
+        height: 105%;
     }
     .footer-content {
         grid-template-columns: auto;
@@ -634,12 +646,15 @@ footer a:hover {
     .footer-fifth {
         text-align: center;
     }
+    .closing {
+        margin-top: 13rem;
+    }
 }
 
 
 /** Small Screen **/
 
-@media screen and (min-width: 500px) and (max-width:768px) {
+@media screen and (min-width: 501px) and (max-width:767px) {
     .wrapper {
         width: 90%;
         margin-top: 5rem;
@@ -780,6 +795,10 @@ footer a:hover {
     }
     .input-wrapper {
         flex-wrap: nowrap;
+    }
+    .input-wrapper small {
+        right: 40%;
+        left: -10%;
     }
     .email-btn {
         height: 2.5rem;
